--- a/cstdlib.syn.html
+++ b/cstdlib.syn.html
@@ -20,14 +20,14 @@ namespace std {
 </span>  extern "C++" using <i>compare-pred<span class='nocorr'></span></i> = int(const void* , const void*);  <span class='comment'>// <i>exposition only</i>
 </span>
   <span class='comment'>// <a href='support.start.term'>[support.start.term]</a>, start and termination
-</span>  [[noreturn]] void abort();
-  int atexit(<i>c-atexit-handler</i>* func);
-  int atexit(<i>atexit-handler</i>* func);
-  int at_quick_exit(<i>c-atexit-handler</i>* func);
-  int at_quick_exit(<i>atexit-handler</i>* func);
+</span>  [[noreturn]] void abort() noexcept;
+  int atexit(<i>c-atexit-handler</i>* func) noexcept;
+  int atexit(<i>atexit-handler</i>* func) noexcept;
+  int at_quick_exit(<i>c-atexit-handler</i>* func) noexcept;
+  int at_quick_exit(<i>atexit-handler</i>* func) noexcept;
   [[noreturn]] void exit(int status);
-  [[noreturn]] void _Exit(int status);
-  [[noreturn]] void quick_exit(int status);
+  [[noreturn]] void _Exit(int status) noexcept;
+  [[noreturn]] void quick_exit(int status) noexcept;
 
   char* getenv(const char* name);
   int system(const char* string);
