--- a/definitions.html
+++ b/definitions.html
@@ -111,12 +111,7 @@ If a C++ program provides a definition for any reserved function, the results ar
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div id='defns.stable'><h3 ><a class='secnum' href='#defns.stable' style='min-width:103pt'>17.3.23</a> stable algorithm <a class='abbr_ref' href='defns.stable'>[defns.stable]</a></h3><p ><span class='indexparent'><a class='index' id='algorithm,stable'></a></span><span class='indexparent'><a class='index' id='stable_algorithm'></a></span>an algorithm that preserves, as appropriate to the particular algorithm, the order
 of elements<br/>
 [&nbsp;<i>Note:</i><span class='space'></span> Requirements for stable algorithms are given in <a href='algorithm.stable'>[algorithm.stable]</a>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div id='defns.traits'><h3 ><a class='secnum' href='#defns.traits' style='min-width:103pt'>17.3.24</a> traits class <a class='abbr_ref' href='defns.traits'>[defns.traits]</a></h3><p ><span class='indexparent'><a class='index' id='traits'></a></span>a class that encapsulates a set of types and functions necessary for class templates and
-function templates to manipulate objects of types for which they are instantiated<br/>
-[&nbsp;<i>Note:</i><span class='space'></span>
-Traits classes defined in Clauses <a href='strings'>[strings]</a>, <a href='localization'>[localization]</a> and <a href='input.output'>[input.output]</a> are
-<a class='hidden_link' href='#def:character_traits' id='def:character_traits'><i>character traits</i></a>, which provide the character handling support needed by the string and
-iostream classes.
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div id='defns.valid'><h3 ><a class='secnum' href='#defns.valid' style='min-width:103pt'>17.3.25</a> valid but unspecified state <a class='abbr_ref' href='defns.valid'>[defns.valid]</a></h3><p ><span class='indexparent'><a class='index' id='valid_but_unspecified_state'></a></span>an object state that is not specified except that the object's invariants are
+function templates to manipulate objects of types for which they are instantiated</p></div><div id='defns.valid'><h3 ><a class='secnum' href='#defns.valid' style='min-width:103pt'>17.3.25</a> valid but unspecified state <a class='abbr_ref' href='defns.valid'>[defns.valid]</a></h3><p ><span class='indexparent'><a class='index' id='valid_but_unspecified_state'></a></span>an object state that is not specified except that the object's invariants are
 met and operations on the object behave as specified for its type<br/>
 [&nbsp;<i>Example:</i><span class='space'></span> If an object <span class='texttt'>x</span> of type <span class='texttt'>std::vector&lt;int&gt;</span> is in a
 valid but unspecified state, <span class='texttt'>x.empty()</span> can be called unconditionally,
