--- a/intro.html
+++ b/intro.html
@@ -153,7 +153,9 @@ language. That description includes detailed syntactic specifications in
 a form described in <a href='syntax'>[syntax]</a>. For convenience, Annex <a href='gram'>[gram]</a>
 repeats all such syntactic specifications.</p></div><div class='para' id='structure-2'><div class='marginalizedparent'><a class='marginalized' href='#structure-2'>2</a></div><p >Clauses <a href='language.support'>[language.support]</a> through <a href='thread'>[thread]</a> and Annex <a href='depr'>[depr]</a>
 (the <a class='hidden_link' href='#def:library_clauses' id='def:library_clauses'><i>library clauses</i></a>) describe the C++ standard library.
-That description includes detailed descriptions of the templates, classes, functions, constants, and macros that constitute the library, in a form described in Clause <a href='library'>[library]</a>.</p></div><div class='para' id='structure-3'><div class='marginalizedparent'><a class='marginalized' href='#structure-3'>3</a></div><p >Annex <a href='implimits'>[implimits]</a> recommends lower bounds on the capacity of conforming
+That description includes detailed descriptions of the
+entities and macros
+that constitute the library, in a form described in Clause <a href='library'>[library]</a>.</p></div><div class='para' id='structure-3'><div class='marginalizedparent'><a class='marginalized' href='#structure-3'>3</a></div><p >Annex <a href='implimits'>[implimits]</a> recommends lower bounds on the capacity of conforming
 implementations.</p></div><div class='para' id='structure-4'><div class='marginalizedparent'><a class='marginalized' href='#structure-4'>4</a></div><p >Annex <a href='diff'>[diff]</a> summarizes the evolution of C++  since its first
 published description, and explains in detail the differences between
 C++  and C. Certain features of C++  exist solely for compatibility
@@ -307,7 +309,15 @@ int f() {
 </span>  char *d = new (au.data + 1) char();
   return *c + *d; <span class='comment'>// OK
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='object-4'><div class='marginalizedparent'><a class='marginalized' href='#object-4'>4</a></div><p ><span class='indexparent'><a class='index' id='object,nested_within'></a></span>An object <i>a</i> is <a class='hidden_link' href='#def:nested_within' id='def:nested_within'><i>nested within</i></a> another object <i>b</i> if:
+
+struct A { unsigned char a[32]; };
+struct B { unsigned char b[16]; };
+A a;
+B *b = new (a.a + 8) B;      <span class='comment'>// <span class='texttt'>a.a</span> provides storage for <span class='texttt'>*b</span>
+</span>int *p = new (b-&gt;b + 4) int; <span class='comment'>// <span class='texttt'>b-&gt;b</span> provides storage for <span class='texttt'>*p</span>
+</span>                             <span class='comment'>// <span class='texttt'>a.a</span> does not provide storage for <span class='texttt'>*p</span> (directly),
+</span>                             <span class='comment'>// but <span class='texttt'>*p</span> is nested within <span class='texttt'>a</span> (see below)
+</span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='object-4'><div class='marginalizedparent'><a class='marginalized' href='#object-4'>4</a></div><p ><span class='indexparent'><a class='index' id='object,nested_within'></a></span>An object <i>a</i> is <a class='hidden_link' href='#def:nested_within' id='def:nested_within'><i>nested within</i></a> another object <i>b</i> if:
 </p><ul ><li ><p ><i>a</i> is a subobject of <i>b</i>, or
 </p></li><li ><p ><i>b</i> provides storage for <i>a</i>, or
 </p></li><li ><p >there exists an object <i>c</i>
