--- a/intro.object.html
+++ b/intro.object.html
@@ -85,7 +85,15 @@ int f() {
 </span>  char *d = new (au.data + 1) char();
   return *c + *d; <span class='comment'>// OK
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='object,nested_within'></a></span>An object <i>a</i> is <a class='hidden_link' href='#def:nested_within' id='def:nested_within'><i>nested within</i></a> another object <i>b</i> if:
+
+struct A { unsigned char a[32]; };
+struct B { unsigned char b[16]; };
+A a;
+B *b = new (a.a + 8) B;      <span class='comment'>// <span class='texttt'>a.a</span> provides storage for <span class='texttt'>*b</span>
+</span>int *p = new (b-&gt;b + 4) int; <span class='comment'>// <span class='texttt'>b-&gt;b</span> provides storage for <span class='texttt'>*p</span>
+</span>                             <span class='comment'>// <span class='texttt'>a.a</span> does not provide storage for <span class='texttt'>*p</span> (directly),
+</span>                             <span class='comment'>// but <span class='texttt'>*p</span> is nested within <span class='texttt'>a</span> (see below)
+</span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='object,nested_within'></a></span>An object <i>a</i> is <a class='hidden_link' href='#def:nested_within' id='def:nested_within'><i>nested within</i></a> another object <i>b</i> if:
 </p><ul ><li ><p ><i>a</i> is a subobject of <i>b</i>, or
 </p></li><li ><p ><i>b</i> provides storage for <i>a</i>, or
 </p></li><li ><p >there exists an object <i>c</i>
