--- a/library.html
+++ b/library.html
@@ -179,12 +179,7 @@ If a C++ program provides a definition for any reserved function, the results ar
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div id='defns.stable'><h3 ><a class='secnum' href='#defns.stable' style='min-width:103pt'>17.3.23</a> stable algorithm <a class='abbr_ref' href='defns.stable'>[defns.stable]</a></h3><p ><span class='indexparent'><a class='index' id='algorithm,stable'></a></span><span class='indexparent'><a class='index' id='stable_algorithm'></a></span>an algorithm that preserves, as appropriate to the particular algorithm, the order
 of elements<br/>
 [&nbsp;<i>Note:</i><span class='space'></span> Requirements for stable algorithms are given in <a href='algorithm.stable'>[algorithm.stable]</a>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div id='defns.traits'><h3 ><a class='secnum' href='#defns.traits' style='min-width:103pt'>17.3.24</a> traits class <a class='abbr_ref' href='defns.traits'>[defns.traits]</a></h3><p ><span class='indexparent'><a class='index' id='traits'></a></span>a class that encapsulates a set of types and functions necessary for class templates and
-function templates to manipulate objects of types for which they are instantiated<br/>
-[&nbsp;<i>Note:</i><span class='space'></span>
-Traits classes defined in Clauses <a href='strings'>[strings]</a>, <a href='localization'>[localization]</a> and <a href='input.output'>[input.output]</a> are
-<a class='hidden_link' href='#def:character_traits' id='def:character_traits'><i>character traits</i></a>, which provide the character handling support needed by the string and
-iostream classes.
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div id='defns.valid'><h3 ><a class='secnum' href='#defns.valid' style='min-width:103pt'>17.3.25</a> valid but unspecified state <a class='abbr_ref' href='defns.valid'>[defns.valid]</a></h3><p ><span class='indexparent'><a class='index' id='valid_but_unspecified_state'></a></span>an object state that is not specified except that the object's invariants are
+function templates to manipulate objects of types for which they are instantiated</p></div><div id='defns.valid'><h3 ><a class='secnum' href='#defns.valid' style='min-width:103pt'>17.3.25</a> valid but unspecified state <a class='abbr_ref' href='defns.valid'>[defns.valid]</a></h3><p ><span class='indexparent'><a class='index' id='valid_but_unspecified_state'></a></span>an object state that is not specified except that the object's invariants are
 met and operations on the object behave as specified for its type<br/>
 [&nbsp;<i>Example:</i><span class='space'></span> If an object <span class='texttt'>x</span> of type <span class='texttt'>std::vector&lt;int&gt;</span> is in a
 valid but unspecified state, <span class='texttt'>x.empty()</span> can be called unconditionally,
@@ -509,11 +504,12 @@ entities,
 <a href='utility.requirements'>[utility.requirements]</a> describes constraints on types and functions used with
 the C++ standard library,
 <a href='constraints'>[constraints]</a> describes constraints on well-formed C++ programs, and
-<a href='conforming'>[conforming]</a> describes constraints on conforming implementations.</p></div><div id='organization'><h3 ><a class='secnum' href='#organization' style='min-width:103pt'>17.5.1</a> Library contents and organization <a class='abbr_ref' href='organization'>[organization]</a></h3><div class='para' id='organization-1'><div class='marginalizedparent'><a class='marginalized' href='#organization-1'>1</a></div><p ><a href='contents'>[contents]</a> describes the entities defined in the C++ standard library.
+<a href='conforming'>[conforming]</a> describes constraints on conforming implementations.</p></div><div id='organization'><h3 ><a class='secnum' href='#organization' style='min-width:103pt'>17.5.1</a> Library contents and organization <a class='abbr_ref' href='organization'>[organization]</a></h3><div class='para' id='organization-1'><div class='marginalizedparent'><a class='marginalized' href='#organization-1'>1</a></div><p ><a href='contents'>[contents]</a> describes the entities and macros defined in the C++ standard library.
 <a href='headers'>[headers]</a> lists the standard library headers and some constraints on those headers.
 <a href='compliance'>[compliance]</a> lists requirements for a freestanding implementation of the C++
-standard library.</p></div><div id='contents'><h4 ><a class='secnum' href='#contents' style='min-width:118pt'>17.5.1.1</a> Library contents <a class='abbr_ref' href='contents'>[contents]</a></h4><div class='para' id='contents-1'><div class='marginalizedparent'><a class='marginalized' href='#contents-1'>1</a></div><p >The C++ standard library provides definitions for the following types of entities:
-macros, values, types, templates, classes, functions, objects.</p></div><div class='para' id='contents-2'><div class='marginalizedparent'><a class='marginalized' href='#contents-2'>2</a></div><p >All library entities except macros,
+standard library.</p></div><div id='contents'><h4 ><a class='secnum' href='#contents' style='min-width:118pt'>17.5.1.1</a> Library contents <a class='abbr_ref' href='contents'>[contents]</a></h4><div class='para' id='contents-1'><div class='marginalizedparent'><a class='marginalized' href='#contents-1'>1</a></div><p >The C++ standard library provides definitions
+for the entities and macros described in the synopses
+of the C++ standard library headers (<a href='headers'>[headers]</a>).</p></div><div class='para' id='contents-2'><div class='marginalizedparent'><a class='marginalized' href='#contents-2'>2</a></div><p >All library entities except
 <span class='texttt'>operator new</span>
 and
 <span class='texttt'>operator delete</span>
@@ -1701,14 +1697,14 @@ namespace std {
 </span>  extern "C++" using <i>compare-pred<span class='nocorr'></span></i> = int(const void* , const void*);  <span class='comment'>// <i>exposition only</i>
 </span>
   <span class='comment'>// <a href='support.start.term'>[support.start.term]</a>, start and termination
-</span>  [[noreturn]] void abort();
-  int atexit(<i>c-atexit-handler</i>* func);
-  int atexit(<i>atexit-handler</i>* func);
-  int at_quick_exit(<i>c-atexit-handler</i>* func);
-  int at_quick_exit(<i>atexit-handler</i>* func);
+</span>  [[noreturn]] void abort() noexcept;
+  int atexit(<i>c-atexit-handler</i>* func) noexcept;
+  int atexit(<i>atexit-handler</i>* func) noexcept;
+  int at_quick_exit(<i>c-atexit-handler</i>* func) noexcept;
+  int at_quick_exit(<i>atexit-handler</i>* func) noexcept;
   [[noreturn]] void exit(int status);
-  [[noreturn]] void _Exit(int status);
-  [[noreturn]] void quick_exit(int status);
+  [[noreturn]] void _Exit(int status) noexcept;
+  [[noreturn]] void quick_exit(int status) noexcept;
 
   char* getenv(const char* name);
   int system(const char* string);
