--- a/optional.syn.html
+++ b/optional.syn.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang='en'><head><title>[optional.syn]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>20</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>20.6</a> Optional objects <a class='abbr_ref' href='optional#syn'>[optional]</a></h2><div id='optional.syn'><h3 ><a class='secnum' style='min-width:103pt'>20.6.2</a> Header <span class='texttt'>&lt;optional&gt;</span> synopsis <a class='abbr_ref'>[optional.syn]</a></h3><p ><span class='indexparent'><a class='index' id='optional'></a></span></p><pre class='codeblock'>
 namespace std {
-  <span class='comment'>// <a href='optional.object'>[optional.object]</a>, optional for object types
+  <span class='comment'>// <a href='optional.optional'>[optional.optional]</a>, optional
 </span>  template &lt;class T&gt; class optional;
 
   <span class='comment'>// <a href='optional.nullopt'>[optional.nullopt]</a>, no-value state indicator
