--- a/requirements.html
+++ b/requirements.html
@@ -7,11 +7,12 @@ entities,
 <a href='utility.requirements'>[utility.requirements]</a> describes constraints on types and functions used with
 the C++ standard library,
 <a href='constraints'>[constraints]</a> describes constraints on well-formed C++ programs, and
-<a href='conforming'>[conforming]</a> describes constraints on conforming implementations.</p></div><div id='organization'><h3 ><a class='secnum' href='#organization' style='min-width:103pt'>17.5.1</a> Library contents and organization <a class='abbr_ref' href='organization'>[organization]</a></h3><div class='para' id='organization-1'><div class='marginalizedparent'><a class='marginalized' href='#organization-1'>1</a></div><p ><a href='contents'>[contents]</a> describes the entities defined in the C++ standard library.
+<a href='conforming'>[conforming]</a> describes constraints on conforming implementations.</p></div><div id='organization'><h3 ><a class='secnum' href='#organization' style='min-width:103pt'>17.5.1</a> Library contents and organization <a class='abbr_ref' href='organization'>[organization]</a></h3><div class='para' id='organization-1'><div class='marginalizedparent'><a class='marginalized' href='#organization-1'>1</a></div><p ><a href='contents'>[contents]</a> describes the entities and macros defined in the C++ standard library.
 <a href='headers'>[headers]</a> lists the standard library headers and some constraints on those headers.
 <a href='compliance'>[compliance]</a> lists requirements for a freestanding implementation of the C++
-standard library.</p></div><div id='contents'><h4 ><a class='secnum' href='#contents' style='min-width:118pt'>17.5.1.1</a> Library contents <a class='abbr_ref' href='contents'>[contents]</a></h4><div class='para' id='contents-1'><div class='marginalizedparent'><a class='marginalized' href='#contents-1'>1</a></div><p >The C++ standard library provides definitions for the following types of entities:
-macros, values, types, templates, classes, functions, objects.</p></div><div class='para' id='contents-2'><div class='marginalizedparent'><a class='marginalized' href='#contents-2'>2</a></div><p >All library entities except macros,
+standard library.</p></div><div id='contents'><h4 ><a class='secnum' href='#contents' style='min-width:118pt'>17.5.1.1</a> Library contents <a class='abbr_ref' href='contents'>[contents]</a></h4><div class='para' id='contents-1'><div class='marginalizedparent'><a class='marginalized' href='#contents-1'>1</a></div><p >The C++ standard library provides definitions
+for the entities and macros described in the synopses
+of the C++ standard library headers (<a href='headers'>[headers]</a>).</p></div><div class='para' id='contents-2'><div class='marginalizedparent'><a class='marginalized' href='#contents-2'>2</a></div><p >All library entities except
 <span class='texttt'>operator new</span>
 and
 <span class='texttt'>operator delete</span>
