--- a/variant.general.html
+++ b/variant.general.html
@@ -3,7 +3,7 @@ If the <span class='texttt'>variant</span> holds a value, that value's type has 
 of the template argument types given to variant.
 These template arguments are called alternatives.</p><p ><span class='indexparent'><a class='index' id='variant'></a></span><b>Header <span class='texttt'>&lt;variant&gt;</span> synopsis</b></p><pre class='codeblock'>
 namespace std {
-  <span class='comment'>// <a href='variant.variant'>[variant.variant]</a>, variant of value types
+  <span class='comment'>// <a href='variant.variant'>[variant.variant]</a>, variant
 </span>  template &lt;class... Types&gt; class variant;
 
   <span class='comment'>// <a href='variant.helper'>[variant.helper]</a>, variant helper classes
