--- a/variant.html
+++ b/variant.html
@@ -3,7 +3,7 @@ If the <span class='texttt'>variant</span> holds a value, that value's type has 
 of the template argument types given to variant.
 These template arguments are called alternatives.</p><p ><span class='indexparent'><a class='index' id='variant'></a></span><b>Header <span class='texttt'>&lt;variant&gt;</span> synopsis</b></p><pre class='codeblock'>
 namespace std {
-  <span class='comment'>// <a href='variant.variant'>[variant.variant]</a>, variant of value types
+  <span class='comment'>// <a href='variant.variant'>[variant.variant]</a>, variant
 </span>  template &lt;class... Types&gt; class variant;
 
   <span class='comment'>// <a href='variant.helper'>[variant.helper]</a>, variant helper classes
@@ -119,7 +119,7 @@ namespace std {
   template &lt;class... Types, class Alloc&gt;
   struct uses_allocator&lt;variant&lt;Types...&gt;, Alloc&gt;;
 } <span class='comment'>// namespace std
-</span></pre><p ><span class='indexparent'><a class='index' id='variant'></a></span></p></div></div><div id='variant'><h3 ><a class='secnum' href='#variant' style='min-width:103pt'>20.7.2</a> <span class='texttt'>variant</span> of value types <a class='abbr_ref' href='variant.variant'>[variant.variant]</a></h3><pre class='codeblock'>
+</span></pre><p ><span class='indexparent'><a class='index' id='variant'></a></span></p></div></div><div id='variant'><h3 ><a class='secnum' href='#variant' style='min-width:103pt'>20.7.2</a> Class template <span class='texttt'>variant</span> <a class='abbr_ref' href='variant.variant'>[variant.variant]</a></h3><pre class='codeblock'>
 namespace std {
   template &lt;class... Types&gt;
   class variant {
