--- a/exception.html
+++ b/exception.html
@@ -31,7 +31,7 @@ exception&amp; operator=(const exception&amp; rhs) noexcept;
 Copies an
 <span class='texttt'>exception</span>
 object.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Postconditions:</i> If <span class='texttt'>*this</span> and <span class='texttt'>rhs</span> both have dynamic type <span class='texttt'>exception</span>
-then <span class='texttt'>strcmp(what(), rhs.what())</span> shall equal 0.
+then the value of the expression <span class='texttt'>strcmp(what(), rhs.what())</span> shall equal 0.
 </p></div></div><p ><span class='indexparent'><a class='index' id='exception,destructor'></a></span><code class='itemdecl'>
 virtual ~exception();
 </code></p><div class='itemdescr'></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i>
