--- a/intro.structure.html
+++ b/intro.structure.html
@@ -3,7 +3,9 @@ language. That description includes detailed syntactic specifications in
 a form described in <a href='syntax'>[syntax]</a>. For convenience, Annex <a href='gram'>[gram]</a>
 repeats all such syntactic specifications.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Clauses <a href='language.support'>[language.support]</a> through <a href='thread'>[thread]</a> and Annex <a href='depr'>[depr]</a>
 (the <a class='hidden_link' href='#def:library_clauses' id='def:library_clauses'><i>library clauses</i></a>) describe the C++ standard library.
-That description includes detailed descriptions of the templates, classes, functions, constants, and macros that constitute the library, in a form described in Clause <a href='library'>[library]</a>.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Annex <a href='implimits'>[implimits]</a> recommends lower bounds on the capacity of conforming
+That description includes detailed descriptions of the
+entities and macros
+that constitute the library, in a form described in Clause <a href='library'>[library]</a>.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Annex <a href='implimits'>[implimits]</a> recommends lower bounds on the capacity of conforming
 implementations.</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >Annex <a href='diff'>[diff]</a> summarizes the evolution of C++  since its first
 published description, and explains in detail the differences between
 C++  and C. Certain features of C++  exist solely for compatibility
