--- a/n4140/gram.html
+++ b/n4140/gram.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html><html lang='en'><head><title>[gram]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='gram'><h1 ><a class='annexnum' style='min-width:73pt'>Annex A&emsp;(informative)</a> Grammar summary <a class='abbr_ref' href='./#gram'>[gram]</a></h1><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p ><span class='index'>grammar</span><span class='index'>summary, syntax</span>This summary of C++  syntax is intended to be an aid to comprehension.
+<!DOCTYPE html><html lang='en'><head><title>[gram]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='gram'><h1 ><a class='annexnum' style='min-width:73pt'>Annex A&emsp;(informative)</a> Grammar summary <a class='abbr_ref' href='./#gram'>[gram]</a></h1><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This summary of C++  syntax is intended to be an aid to comprehension.
 It is not an exact statement of the language.
 In particular, the grammar described here accepts
 a superset of valid C++  constructs.
 Disambiguation rules (<a href='stmt.ambig'>[stmt.ambig]</a>, <a href='dcl.spec'>[dcl.spec]</a>, <a href='class.member.lookup'>[class.member.lookup]</a>)
 must be applied to distinguish expressions from declarations.
 Further, access control, ambiguity, and type rules must be used
-to weed out syntactically valid but meaningless constructs.</p></div><div id='key'><h2 ><a class='secnum' href='#key' style='min-width:88pt'>A.1</a> Keywords <a class='abbr_ref' href='gram.key'>[gram.key]</a></h2><div class='para' id='key-1'><div class='marginalizedparent'><a class='marginalized' href='#key-1'>1</a></div><p ><span class='index'>keyword</span>New context-dependent keywords are introduced into a program by
+to weed out syntactically valid but meaningless constructs.</p></div><div id='key'><h2 ><a class='secnum' href='#key' style='min-width:88pt'>A.1</a> Keywords <a class='abbr_ref' href='gram.key'>[gram.key]</a></h2><div class='para' id='key-1'><div class='marginalizedparent'><a class='marginalized' href='#key-1'>1</a></div><p >New context-dependent keywords are introduced into a program by
 <span class='texttt'>typedef</span> (<a href='dcl.typedef'>[dcl.typedef]</a>),
 <span class='texttt'>namespace</span> (<a href='namespace.def'>[namespace.def]</a>),
 class (Clause <a href='class'>[class]</a>), enumeration (<a href='dcl.enum'>[dcl.enum]</a>), and
