--- a/n4140/lex.html
+++ b/n4140/lex.html
@@ -332,7 +332,7 @@ as is the appearance of the
 character <span class='texttt'>"</span> in an <i ><a href='lex.header#nt:h-char-sequence'>h-char-sequence</a></i>.<a class='footnotenum' href='#footnote-19'>19</a><span class='indexparent'><a class='index' id='header,name'></a></span></p></div><div class='footnote' id='footnote-19'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-19'>19)</a></div><p >Thus, a
 sequence of characters that resembles an escape sequence might result in an
 error, be interpreted as the character corresponding to the escape sequence, or
-have a completely different meaning, depending on the implementation.</p></div></div><div id='ppnumber'><h2 ><a class='secnum' href='#ppnumber' style='min-width:88pt'>2.10</a> Preprocessing numbers <a class='abbr_ref' href='lex.ppnumber'>[lex.ppnumber]</a></h2><p ><span class='index'>number!preprocessing|(</span></p><pre class='bnf'><a id='nt:pp-number'>pp-number:</a>
+have a completely different meaning, depending on the implementation.</p></div></div><div id='ppnumber'><h2 ><a class='secnum' href='#ppnumber' style='min-width:88pt'>2.10</a> Preprocessing numbers <a class='abbr_ref' href='lex.ppnumber'>[lex.ppnumber]</a></h2><p ></p><pre class='bnf'><a id='nt:pp-number'>pp-number:</a>
     <i ><a href='lex.name#nt:digit'>digit</a></i>
     <span class='terminal'>.</span> <i ><a href='lex.name#nt:digit'>digit</a></i>
     <i ><a href='lex.ppnumber#nt:pp-number'>pp-number</a></i> <i ><a href='lex.name#nt:digit'>digit</a></i>
@@ -345,7 +345,7 @@ have a completely different meaning, depending on the implementation.</p></div><
 tokens (<a href='lex.icon'>[lex.icon]</a>) and all floating literal
 tokens (<a href='lex.fcon'>[lex.fcon]</a>).</p></div><div class='para' id='ppnumber-2'><div class='marginalizedparent'><a class='marginalized' href='#ppnumber-2'>2</a></div><p >A preprocessing number does not have a type or a value; it acquires both
 after a successful conversion to an integer literal token or a floating literal
-token.<span class='index'>number!preprocessing|)</span></p></div></div><div id='name'><h2 ><a class='secnum' href='#name' style='min-width:88pt'>2.11</a> Identifiers <a class='abbr_ref' href='lex.name'>[lex.name]</a></h2><p ><span class='indexparent'><a class='index' id='identifier'></a></span></p><pre class='bnf'><a id='nt:identifier'>identifier:</a>
+token.</p></div></div><div id='name'><h2 ><a class='secnum' href='#name' style='min-width:88pt'>2.11</a> Identifiers <a class='abbr_ref' href='lex.name'>[lex.name]</a></h2><p ><span class='indexparent'><a class='index' id='identifier'></a></span></p><pre class='bnf'><a id='nt:identifier'>identifier:</a>
     <i ><a href='lex.name#nt:identifier-nondigit'>identifier-nondigit</a></i>
     <i ><a href='lex.name#nt:identifier'>identifier</a></i> <i ><a href='lex.name#nt:identifier-nondigit'>identifier-nondigit</a></i>
     <i ><a href='lex.name#nt:identifier'>identifier</a></i> <i ><a href='lex.name#nt:digit'>digit</a></i></pre><pre class='bnf'><a id='nt:identifier-nondigit'>identifier-nondigit:</a>
