--- a/language.support.html
+++ b/language.support.html
@@ -835,7 +835,7 @@ of objects with thread storage duration.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 After calling registered functions, <span class='texttt'>quick_exit</span> shall call <span class='texttt'>_Exit(status)</span>.
 [&nbsp;<i>Note:</i><span class='space'></span>
-The standard file buffers are not flushed. <span class='textsc'>See:</span> ISO C 7.22.4.5.
+The standard file buffers are not flushed.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><p ><span class='textsc'>See also:</span> <a href='basic.start'>[basic.start]</a>, <a href='basic.start.term'>[basic.start.term]</a>,
 ISO C 7.22.4.</p><div class='footnote' id='footnote-217'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-217'>217)</a></div><p >A function is called for every time it is registered.</p></div><div class='footnote' id='footnote-218'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-218'>218)</a></div><p >Objects with automatic storage duration are all destroyed in a program whose
 function
