--- a/predef.iterators.html
+++ b/predef.iterators.html
@@ -555,8 +555,8 @@ functions are instantiated, the template parameter shall meet the
 requirements for a Bidirectional Iterator (<a href='bidirectional.iterators'>[bidirectional.iterators]</a>)
 or a Random Access Iterator (<a href='random.access.iterators'>[random.access.iterators]</a>), respectively.</p></div></div><div id='move.iter.ops'><h4 ><a class='secnum' href='#move.iter.ops' style='min-width:118pt'>24.5.3.3</a> <span class='texttt'>move_iterator</span> operations <a class='abbr_ref' href='move.iter.ops'>[move.iter.ops]</a></h4><div id='move.iter.op.const'><h4 ><a class='secnum' href='#move.iter.op.const' style='min-width:133pt'>24.5.3.3.1</a> <span class='texttt'>move_iterator</span> constructors <a class='abbr_ref' href='move.iter.op.const'>[move.iter.op.const]</a></h4><p ><span class='indexparent'><a class='index' id='move_iterator,constructor'></a></span><code class='itemdecl'>
 constexpr move_iterator();
-</code></p><div class='itemdescr'></div><div class='para' id='move.iter.op.const-1'><div class='marginalizedparent'><a class='marginalized' href='#move.iter.op.const-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> Constructs a <span class='texttt'>move_iterator</span>, value
-initializing <span class='texttt'>current</span>. Iterator operations applied to the resulting
+</code></p><div class='itemdescr'></div><div class='para' id='move.iter.op.const-1'><div class='marginalizedparent'><a class='marginalized' href='#move.iter.op.const-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> Constructs a <span class='texttt'>move_iterator</span>, value-initializing
+<span class='texttt'>current</span>. Iterator operations applied to the resulting
 iterator have defined behavior if and only if the corresponding operations are defined
 on a value-initialized iterator of type <span class='texttt'>Iterator</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='move_iterator,constructor'></a></span><code class='itemdecl'>
