--- a/container.requirements.html
+++ b/container.requirements.html
@@ -186,7 +186,7 @@ exception.
 All other constructors for these container types take a
 <span class='texttt'>const allocator_type&amp;</span> argument.
 [&nbsp;<i>Note:</i><span class='space'></span> If an invocation of a constructor uses the default value of an optional
-allocator argument, then the <span class='texttt'>Allocator</span> type must support value initialization.
+allocator argument, then the <span class='texttt'>Allocator</span> type must support value-initialization.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 A copy of this allocator is used for any memory allocation and element construction
 performed, by these constructors and by all member functions,
