--- a/variant.ctor.html
+++ b/variant.ctor.html
@@ -4,7 +4,7 @@ constexpr variant() noexcept(<i><span class='texttt'>see below</span></i>);
 </code></p></div><div class='itemdescr'></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Constructs a <span class='texttt'>variant</span> holding a value-initialized value of type <span class='math'><span class='mathalpha'>T</span><sub >0</sub></span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Postconditions:</i>
 <span class='texttt'>valueless_by_exception()</span> is <span class='texttt'>false</span> and <span class='texttt'>index()</span> is <span class='texttt'>0</span>.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Throws:</i>
-Any exception thrown by the value initialization of <span class='math'><span class='mathalpha'>T</span><sub >0</sub></span>.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i>
+Any exception thrown by the value-initialization of <span class='math'><span class='mathalpha'>T</span><sub >0</sub></span>.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 This function shall be <span class='texttt'>constexpr</span> if and only if the
 value-initialization of the alternative type <span class='math'><span class='mathalpha'>T</span><sub >0</sub></span> would satisfy the
 requirements for a <span class='texttt'>constexpr</span> function.
